# bff-web

./: .env.schema  .gitignore  Dockerfile  Jenkinsfile  README.md  config.py  gunicorn_config.py  gunicorn_starter.sh  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-and-publish.yml  run_tests.yml
api/: __init__.py  api_archive.py  api_auth.py  api_contact_us.py  api_dataset_rest_proxy.py  api_download.py  api_email.py  api_invitation.py  api_preview.py  api_project.py  api_project_files.py  api_project_v2.py  api_provenance.py  api_users.py  api_workbench.py  module_api.py
api/api_announcement/: announcement.py
api/api_container/: api_aduser_update.py  api_container_user.py  api_containers.py  api_folder_creation.py  container_operation_neo4j.py  namespace.py  route_registry.py  user_operation.py
api/api_copy_request/: copy_request.py
api/api_data_manifest/: data_manifest.py  utils.py
api/api_dataset/: api_activity_logs.py  api_folder.py  api_schema.py  api_schema_template.py  api_validate.py  api_versions.py  utils.py
api/api_files/: __init__.py  file_ops.py  file_search.py  file_stats.py  meta.py  utils.py  vfolder_ops.py
api/api_health/: health.py
api/api_kg/: api_kg_resource.py
api/api_notification/: notification.py  unsubscribe.py
api/api_resource_request/: resource_request.py
api/api_tags/: api_batch_tags_operation.py  api_tags_operation.py  utils.py
api/api_user_event/: event.py
app/: __init__.py  api_registry.py  auth.py  back.py  flask.py  main.py
logs/: api_data_manifest.log.2022-05-20  api_data_manifest.log.2022-05-24  api_data_manifest.log.2022-05-27  api_meta.log.2022-05-20  api_meta.log.2022-05-24  jwt_identify.log.2022-05-20  jwt_identify.log.2022-05-24  jwt_identify.log.2022-05-27  main.log.2022-05-18  main.log.2022-05-27
models/: api_data_manifest.py  api_meta_class.py  api_resource_request.py  api_response.py  contact_us.py  resource_request.py  service_meta_class.py  user_type.py
resources/: decorator.py  error_handler.py  lock.py  minio.py  swagger_modules.py  utils.py
services/contact_us_services/: contact_us_manager.py
services/container_services/: container_manager.py
services/dataset/: __init__.py
services/meta/: __init__.py
services/neo4j_service/: neo4j_client.py
services/notifier_services/: email_service.py  short_text_service.py
services/permissions_service/: decorators.py  utils.py
services/search/: client.py
tests/: conftest.py  pytest.ini
tests/api/: test_api_project_files.py  test_api_project_v2.py
tests/api/api_activity_logs/: test_activity_logs.py
tests/api/api_files/: test_file_search.py  test_meta.py
tests/app/: test_flask.py
(+4 files in other folders)
