[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
fastapi = "0.78.0"
fastapi-utils = "0.2.1"
aniso8601 = "8.0.0"
attrs = "19.3.0"
certifi = "2020.4.5.1"
chardet = "3.0.4"
gunicorn = "20.0.4"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
jsonschema = "3.2.0"
MarkupSafe = "1.1.1"
PyJWT = "1.7.1"
python-json-logger = "0.1.11"
pytz = "2020.1"
requests = "2.23.0"
toml = "0.10.1"
urllib3 = "1.25.9"
Werkzeug = "1.0.1"
wrapt = "1.12.1"
python-ldap = "3.3.1"
python-dotenv = "0.19.1"
pydantic = "1.8.2"
asyncpg = "0.25.0"
opentelemetry-exporter-jaeger = "1.6.2"
opentelemetry-instrumentation = "^0.30b1"
opentelemetry-instrumentation-fastapi = "^0.30b1"
opentelemetry-instrumentation-requests = "0.30b1"
opentelemetry-instrumentation-httpx = "^0.30b1"
uvicorn = "0.17.6"
httpx = "0.23.0"
pilot-platform-common = "0.0.32"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-env = "0.6.2"
pytest-mock = "3.7.0"
pytest-httpx = "0.21.0"
coverage = "6.3.2"
requests-mock = "1.9.3"
testcontainers = "3.4.2"
redis = "4.3.1"
trio = "0.21.0"
async-asgi-testclient = "^1.4.9"
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
